--- a/package.json
+++ b/package.json
@@ -59,6 +59,9 @@
       "last 1 safari version"
     ]
   },
+  "engines": {
+    "node": "16.x"
+  },
   "devDependencies": {
     "redux-logger": "^3.0.6",
     "source-map-explorer": "^2.5.2"
